%% E021 - Class diagram: interfaces in Core vs implementations in Infrastructure
%% Legend: Core defines interfaces; Infrastructure implements them. Phase 1: Storage Queues, SqlGraphService.
classDiagram
    direction TB

    IRulingRepository <|.. RulingRepository
    ICourtRepository <|.. CourtRepository
    IJudgeRepository <|.. JudgeRepository
    IKeywordRepository <|.. KeywordRepository
    IStatuteRepository <|.. StatuteRepository
    ICitationRepository <|.. CitationRepository
    ICrawlerConfigRepository <|.. CrawlerConfigRepository
    ISearchService <|.. AzureSearchService
    IBlobStorageService <|.. AzureBlobStorageService
    IEmbeddingService <|.. AzureOpenAiEmbeddingService
    IGraphService <|.. SqlGraphService
    IQueuePublisher <|.. StorageQueuePublisher

    RulingRepository --> AppDbContext
    CourtRepository --> AppDbContext
    JudgeRepository --> AppDbContext
    KeywordRepository --> AppDbContext
    StatuteRepository --> AppDbContext
    CitationRepository --> AppDbContext
    CrawlerConfigRepository --> AppDbContext
